# NESZ

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  test.yml
docs/6502/obelisk/: Addressing.md  Algorithms.md  Architecture.md  Downloads.md  Instructions.md  Introduction.md  Links.md  Reference.md  Registers.md
docs/6502/obelisk/files/: bbc.inc  debug.inc  maclib.inc
include/app/: Meta.hpp.in
include/core/: Bus.hpp  CPU.hpp  Types.hpp  Utils.hpp
src/: main.cpp  meson.build
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
src/core/: Bus.cpp  CMakeLists.txt  CPU.cpp  Utils.cpp
test/: CMakeLists.txt  CPUTest.cpp  meson.build
